# db_public

db-03_dr_madness/: BSD-license  README
db-04_screenhack/: README.txt  db-04_cursorn.c  db-04_untangle.c
db-05_doomsday_treasure_hunter/: CMakeLists.txt  COPYING  README.txt
db-05_doomsday_treasure_hunter/data/: finalman-ballz_on_fire.xm  greaty.xm  kack.xm  level1.txt  level10.txt  level11.txt  level1tomas.txt  level2.txt  level3.txt  level3tomas.txt  level4.txt  level4tomas.txt  level5.txt  level6.txt  level7.txt  level8.txt  level9.txt  levelbomb.txt  levelelectric.txt  levelend.txt  levellasershield.txt  levelwalljump.txt  map.txt  map.xm  save.txt  testlevel.txt  training.xm  tuff.xm
db-05_doomsday_treasure_hunter/src/: animation.cpp  animation.hpp  blending.cpp  blending.hpp  entity.cpp  entity.hpp  exception.cpp  exception.hpp  fading.cpp  fading.hpp  fileutil.cpp  fileutil.hpp  game.cpp  game.hpp  keystate.cpp  keystate.hpp  level.cpp  level.hpp  main.cpp  map.cpp  map.hpp  music.cpp  music.hpp  os.hpp  resourcehandler.cpp  resourcehandler.hpp  splashscreen.cpp  splashscreen.hpp  stringutil.hpp  tile.cpp  tile.hpp  tilemap.cpp  tilemap.hpp  timer.cpp  timer.hpp  util.hpp
db-05_doomsday_treasure_hunter/src/entities/: bomb.cpp  bomb.hpp  breakingtile.cpp  breakingtile.hpp  bubbles.cpp  bubbles.hpp  button.cpp  button.hpp  camera.cpp  camera.hpp  cloudsbackground.cpp  cloudsbackground.hpp  disappearingtile.cpp  disappearingtile.hpp  doortile.cpp  doortile.hpp  explodabletile.cpp  explodabletile.hpp  fly.cpp  fly.hpp  goal.cpp  goal.hpp  gradientbackground.cpp  gradientbackground.hpp  laserbeam.cpp  laserbeam.hpp  light.cpp  light.hpp  movingspikes.cpp  movingspikes.hpp  particles.cpp  particles.hpp  patrol.cpp  patrol.hpp  player.cpp  player.hpp  rollingspikes.cpp  rollingspikes.hpp  snow.cpp  snow.hpp  (+4 more)
db-05_doomsday_treasure_hunter/src/gui/: dblistbox.cpp  dblistbox.hpp  dialog.cpp  dialog.hpp
db-05_doomsday_treasure_hunter/src/guichan/: actionevent.cpp  actionevent.hpp  event.hpp  gui.cpp  gui.hpp  selectionevent.cpp  selectionevent.hpp
db-06_secret_of_fantasy/: CMakeLists.txt  README.TXT  db-speedhack09.sln  db-speedhack09.vcproj
db-06_secret_of_fantasy/src/: CMakeLists.txt  animation.cpp  animation.hpp  blending.cpp  blending.hpp  dbexception.cpp  entity.cpp  entity.hpp  entityfactory.cpp  entityfactory.hpp  exception.hpp  fading.cpp  fading.hpp  fileutil.cpp  fileutil.hpp  game.cpp  game.hpp  gamestate.cpp  gamestate.hpp  inventory.cpp  inventory.hpp  item.cpp  item.hpp  itemfactory.cpp  itemfactory.hpp  keystate.cpp  keystate.hpp  main.cpp  music.cpp  os.hpp  random.cpp  random.hpp  resourcehandler.cpp  room.cpp  room.hpp  roomgenerator.cpp  roomgenerator.hpp  roomloader.cpp  roomloader.hpp  splashscreen.cpp  (+9 more)
db-06_secret_of_fantasy/src/dumb/core/: rendsig.c
db-06_secret_of_fantasy/src/entities/: actor.cpp  actor.hpp  bat.cpp  bat.hpp  bombentity.cpp  bombentity.hpp  chest.cpp  chest.hpp  citizen.cpp  citizen.hpp  dialogtile.cpp  dialogtile.hpp  dirt.cpp  dirt.hpp  door.cpp  door.hpp  endingcutscene.cpp  endingcutscene.hpp  explodable.cpp  explodable.hpp  eye.cpp  eye.hpp  friendlyvapor.cpp  friendlyvapor.hpp  introcutscene.cpp  introcutscene.hpp  itementity.cpp  itementity.hpp  milkcutscene.cpp  milkcutscene.hpp  normalactor.cpp  normalactor.hpp  paintingcutscene.cpp  paintingcutscene.hpp  plancutscene.cpp  plancutscene.hpp  player.cpp  player.hpp  portal.cpp  portal.hpp  (+18 more)
db-06_secret_of_fantasy/src/gui/: dbcontainer.cpp  dbcontainer.hpp  dblistbox.cpp  dblistbox.hpp  dbscrollarea.cpp  dbscrollarea.hpp  dialog.cpp  dialog.hpp  inventorydialog.cpp  inventorydialog.hpp  shopdialog.cpp  shopdialog.hpp
db-06_secret_of_fantasy/src/items/: bomb.cpp  bomb.hpp  calciumcrystal.cpp  calciumcrystal.hpp  cure.cpp  cure.hpp  energydrink.cpp  energydrink.hpp  magicgun.cpp  magicgun.hpp  milk.cpp  milk.hpp  shovel.cpp  shovel.hpp  windsword.cpp  windsword.hpp  woodensword.cpp  woodensword.hpp
db-07_secret_of_fantasy_2/: TODO.txt  db-tins10.sln  db-tins10.vcproj  dumb.vcproj
db-08_green_grappler/: BSD-license.txt  COPYING.txt  Dumb-license.txt  README.txt  TmxParser.vcproj  build.py  db-speedhack11.sln  db-speedhack11.vcproj  dumb.vcproj
db-09_primal_scream/: README.txt  compile.sh
db-10_verkstan/: comileshaders.bat  db-image2header.sln  db-verkstan-editor.sln  db-verkstan.sln  testshader.fx  (+2 more)
(+1080 files in other folders)
